Changelog for Touchdown
=======================

0.0.21 (unreleased)
-------------------

- Nothing changed yet.


0.0.20 (2015-06-23)
-------------------

- More graceful handling of KeyboardInterrupt.

- Fix cache corruption issue.

- Workaround some potential eventual consitency issues with RouteTable and
  NetworkACL. Observed behaviour is that after creating them they arent visible
  to the describe API. Then they are. Then they arent. Then they are.

- Fix the Windows version of the local provider by runnign the bundle under an
  interpreter.


0.0.19 (2015-06-15)
-------------------

- Add AWS password policy management. This lets you enforce password complexity
  for your IAM users.

- Add a 'touchdown get-signin-url' command.

- Better 'touchdown dot' output.

- Fix ``Y/n`` confirmation so that ``Y`` really is the default.

- #43 - Fix documentation and validation around Subnet ``cidr_block`` -
  ``192.168.0.1/24`` isn't a valid cidr.

- A resource acquired with ``Foo.get_bar`` will not be considered for deletion
  by ``touchdown destroy``.


0.0.18 (2015-06-11)
-------------------

- Fix a conflict between IAM policies and Resource policies. Resource policies
  are now specified using ``ensure``::

      aws.add_role(
          name="myrole",
          ensure=["never-destroy"],
          assume_role_policy={...},
          policies={
              "mypolicy": {
                  "Statement": [{
                      "Effect": "Allow",
                      "Action": "*",
                      "Resource": "*",
                  }],
              },
          },
      )

- Fix a conflict between ``Plan.validate`` and ``Rollback.validate`` which
  caused a regression in the ``rollback`` command.


0.0.17 (2015-06-10)
-------------------

- Fix an edge case where using mfa, cross account roles and image_copy.


0.0.16 (2015-06-10)
-------------------

- Can now do use MFA and cross-account roles to do deployments in other