@@ -4,7 +4,8 @@ Changelog for Touchdown
 0.0.21 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Override waiters for cloudfront. Double the amount of time we will wait for a
+  distributiion to be 'Deployed' as 25 is too low in practice.
 
 
 0.0.20 (2015-06-23)
